<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auth">Authorization</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name (optional)</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sing in with Google</string>
    <string name="log_in">Login</string>
    <string name="register">No account yet?</string>
    <string name="register_explicit">Register</string>
    <string name="join_us">Join us</string>
    <string name="confirm_email_title">Confirm Email</string>
    <string name="confirm_email_text">You must confirm your Email. We\'ve sent you the link. Please, check your messages and follow the link</string>
    <string name="ok">Ok</string>
    <string name="empty_input_error">Email and password can\'t be empty</string>
    <string name="unknown_error">Unknown error</string>
    <string name="refresh_token_error">Session is invalid, try login again</string>
    <string name="email_error">Incorrect email</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="server_client_id" translatable="false">620553566742-uj469o7nqh2dg586iv39ud3ivlpcji1l.apps.googleusercontent.com</string>
</resources>