<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ru.shawarma.auth.viewmodels.AuthViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TitleTextView"
            android:id="@+id/authLogInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_in"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/authTextInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authTextInputLayoutEmail"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/authTextInputLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authTextInputLayoutPassword"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/ErrorTextView"
            android:id="@+id/authErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="@{viewModel.isError() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authTextInputLayoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authSignInButton"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="@{!viewModel.isLoading()}"
            android:onClick="@{() -> (!viewModel.email.empty &amp;&amp; !viewModel.password.empty) ? viewModel.auth() : viewModel.setEmptyInputError()}"
            android:text='@{viewModel.isLoading() ? "" : @string/sign_in}'
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authErrorTextView"
            tools:ignore="SpeakableTextPresentCheck" />


        <ProgressBar
            android:id="@+id/authButtonProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="10dp"
            android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/authSignInButton"
            app:layout_constraintStart_toStartOf="@+id/authSignInButton"
            app:layout_constraintTop_toTopOf="@+id/authSignInButton"
            app:layout_constraintBottom_toBottomOf="@+id/authSignInButton"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/authRegisterButton"
            style="@style/OutlinedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="@{() -> viewModel.goToRegister()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authSignInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>