<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ru.shawarma.auth.viewmodels.RegisterViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TitleTextView"
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/join_us"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registerTextInputLayoutEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTextInputLayoutEmail"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registerTextInputLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTextInputLayoutName"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTextInputLayoutPassword"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTextInputLayoutName">

            <EditText
                android:id="@+id/registerEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/ErrorTextView"
            android:id="@+id/registerErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="@{viewModel.isError() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTextInputLayoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerRegisterButton"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text='@{viewModel.isLoading() ? "" : @string/register_explicit}'
            android:clickable="@{!viewModel.isLoading()}"
            android:textAllCaps="false"
            android:onClick="@{() -> (!viewModel.email.empty &amp;&amp; !viewModel.password.empty) ? viewModel.register() : viewModel.setEmptyInputError()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerErrorTextView" />

        <ProgressBar
            android:id="@+id/registerButtonProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="10dp"
            android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/registerRegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registerRegisterButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>